# der-die-das-spin

./: .env  .gitignore  .gitmodules  .mergify.yml  CAPYBARA_THEME.md  CHANGELOG.md  CLEANUP_AND_ROADMAP.md  Cargo.toml  DATABASE_SETUP.md  GAME_DESIGN.md  IMPLEMENTATION_PLAN_AI_SENTENCES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  RELEASE.md  SPIN_FEATURES_RESEARCH.md  STATUS.md  TESTING.md  WEEK1_ACTION_PLAN.md  build.rs  deny.toml  diesel.toml  sample_words.db  verify_game.sh
.claude/: settings.local.json
.github/workflows/: release.yml  rust-native.yml
der-die-das-spin/: Cargo.toml  Cargo.toml.orig  compose.yml  result.sql  spin.toml  upload-enriched-db.sql  upload_cloud_db.py
der-die-das-spin/src/: bindings.rs  kid_id.rs  lib.rs  sentences.rs
der-die-das-spin/static/: category-quiz.js  index.html  script.js  style.css  syllable-puzzle.js
dewiktionary/: Cargo.toml
dewiktionary-diesel/: Cargo.toml
dewiktionary-diesel/src/: lib.rs  models.rs  schema.rs
dewiktionary-importer-cli/: Cargo.toml  deny.toml
dewiktionary-importer-cli/src/: main.rs
dewiktionary/src/: parser.rs
migrations/2023-11-11-183839_create_database/: down.sql  up.sql
migrations/2025-11-11-214834-0000_add_all_german_cases/: down.sql  up.sql
tools/: build_database.py  create_sample_db.py  enrich_database.py  wiktionary_parser.py
