[workspace]
resolver = "2"

    #"der-die-das-spin",

members = [
    "dewiktionary",
    "dewiktionary-diesel",
    "dewiktionary-importer-cli",
    "der-die-das-spin",
]

[profile.release]
lto = true
#debug = true
strip = "debuginfo"

[workspace.dependencies]
tracing = { version = "0.1.40", features = ["attributes"] }
serde = { version = "1.0.190", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
