[package]
name = "der-die-das"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = ""
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
serde = { workspace = true}
serde_json = "1.0"