[package]
name = "der-die-das"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = ""
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[package.metadata.component]
package = "component:der-die-das"
adapter = "../spin-fileserver/adapters/fd1e948d/wasi_snapshot_preview1.reactor.wasm"

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
serde = { workspace = true}
serde_json = "1.0"

cargo-component-bindings = "0.4.0"
wit-bindgen = "0.13.0"
futures = "0.3.28"