[package]
name = "der-die-das"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = ""
version = "0.3.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
rand = { version = "0.8", features = ["small_rng"] }
serde = { workspace = true}
serde_json = "1.0"
spin-sdk = "5.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
